// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SectionHeader Actions 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1qm9nul-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-noWrap css-omosr2-MuiTypography-root"
        >
          This one has actions
        </h3>
        <div
          class="MuiBox-root css-ldp2l3"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item css-43x3z6-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <button>
            Edit
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <button>
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SectionHeader Main 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1qm9nul-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 MuiTypography-noWrap css-yeaech-MuiTypography-root"
        >
          This is a section title main
        </h1>
        <div
          class="MuiBox-root css-ldp2l3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SectionHeader Normal 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1qm9nul-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-noWrap css-omosr2-MuiTypography-root"
        >
          This is a section title normal
        </h3>
        <div
          class="MuiBox-root css-ldp2l3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SectionHeader Normal No Padding 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-17atqe3-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-noWrap css-omosr2-MuiTypography-root"
        >
          No padding on this normal title
        </h3>
        <div
          class="MuiBox-root css-ldp2l3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SectionHeader Subsection 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1qm9nul-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 MuiTypography-noWrap css-m5vcfd-MuiTypography-root"
        >
          This is a section title subsection
        </h2>
        <div
          class="MuiBox-root css-ldp2l3"
        />
      </div>
    </div>
  </div>
</div>
`;
